# modppl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
gen-rs/: Cargo.toml
gen-rs-macros/: Cargo.toml
gen-rs-macros/src/: address.rs  ast.rs  codegen.rs  dag.rs  ir.rs  lib.rs  print_ir.rs  repr.rs
gen-rs-macros/tests/: parse.rs  static_ir.rs
gen-rs/src/: address.rs  choices.rs  gfi.rs  gfi_new.rs  hashmap.rs  lib.rs  mathutils.rs  prelude.rs  samples.rs  trie.rs
gen-rs/src/dynamic/: mod.rs  trace.rs
gen-rs/src/inference/: importance.rs  mala.rs  mh.rs  mod.rs  new_importance.rs  particle_filter.rs
gen-rs/src/modeling/: dynamic.rs  dyngenfn.rs  dynunfold.rs  mod.rs  triefn.rs  unfold.rs
gen-rs/src/modeling/dists/: bernoulli.rs  categorical.rs  distribution.rs  gamma.rs  geometric.rs  mod.rs  mvnormal.rs  normal.rs  poisson.rs
gen-rs/tests/: dists.rs  importance.rs  mh.rs  mod.rs  particle_filter.rs  smc.rs  test_dyngenfn.rs  test_hierarchical_dsl.rs  test_parse.rs  test_pointed.rs  test_trie.rs  test_triefn.rs  trie.rs  trie_models.rs
gen-rs/tests/dyngenfns/: ferric.rs  hierarchical.rs  mod.rs  simple.rs  unfold.rs
gen-rs/tests/hmm/: forward.rs  mod.rs  model.rs  trace.rs
gen-rs/tests/hmm_model/: mod.rs  trace.rs
gen-rs/tests/pf/: mod.rs  model.rs  trace.rs
gen-rs/tests/pointed/: mod.rs  model.rs  proposal.rs  trace.rs  types_2d.rs
gen-rs/tests/pointed_model/: model.rs  proposal.rs  types_2d.rs
gen-rs/tests/triefns/: ferric.rs  hierarchical.rs  mod.rs  simple.rs  unfold.rs
modppl/: Cargo.toml
modppl-macros/: Cargo.toml
modppl-macros/src/: address.rs  lib.rs  proposal.rs
modppl/src/: address.rs  gfi.rs  lib.rs  prelude.rs  trie.rs
modppl/src/inference/: importance.rs  mh.rs  mod.rs  particle_filter.rs
modppl/src/modeling/: dyngenfn.rs  dynunfold.rs  mod.rs
modppl/src/modeling/dists/: bernoulli.rs  beta.rs  distribution.rs  gamma.rs  geometric.rs  mod.rs  mvnormal.rs  normal.rs  poisson.rs  uniform.rs
modppl/tests/: dists.rs  dyngenfn.rs  importance.rs  mh.rs  particle_filter.rs  smc.rs  test_pointed.rs  trie.rs
modppl/tests/dyngenfns/: ferric.rs  hierarchical.rs  mod.rs  simple.rs  unfold.rs
modppl/tests/hmm/: model.rs  trace.rs
modppl/tests/pointed_model/: mod.rs  model.rs  proposal.rs  types_2d.rs
src/: choices.rs  dists.rs  gfi.rs  lib.rs  main.rs  mathutils.rs  mh.rs  sketch.rs  smc.rs  types_2d.rs  vec_trace.rs
src/inference/: enumeration.rs  importance.rs  mcmc.rs  mh.rs  mod.rs
src/modeling/: dists.rs  mod.rs
src/modeling/unfold/: model.rs
tests/: dists.rs  importance.rs  importance_sampling.rs  mh.rs  mod.rs  smc.rs
tests/pointed/: mod.rs  model.rs  proposal.rs  trace.rs
visualization/: visualizer.py
