[package]
name = "gen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
itertools-num = "0.1.3"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_json = "1.0.96"
statistical = "1.0.0"
