[package]
name = "gen-rs-dsl"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gen-rs = { path = "../gen-rs" }
approx = "0.5.1"
common_macros = "0.1.1"
itertools-num = "0.1.3"
proc-macro2 = "1.0.63"
quote = "1.0.28"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_json = "1.0.96"
statistical = "1.0.0"
syn = {features = ["full", "extra-traits"], version="2.0.22"}
