[package]
name = "gen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = { features = ["serde-serialize"], version = "0.32.2" }
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_json = "1.0.96"
statistical = "1.0.0"
