[package]
name = "gen-rs"
description = "a experimental library for probabilistic programming in Rust."
version = "0.2.3"
edition = "2021"
keywords = ["statistics", "ppl", "mcmc", "importance-sampling", "particle-filtering"]
categories = ["science", "simulation"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/agarret7/gen-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = { features = ["serde-serialize"], version = "0.32.2" }
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.163", features = ["rc", "derive"] }
serde_json = "1.0.96"
statistical = "1.0.0"
