[package]
name = "modppl-macros"
description = "convenience macros for modeling with modppl."
version = "0.1.0"
edition = "2021"
keywords = ["statistics", "ppl", "mcmc", "importance-sampling", "particle-filtering"]
categories = ["science", "simulation"]
license = "MIT"
repository = "https://github.com/agarret7/modppl"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.50", features = ["full", "visit-mut"] }
